# nonotes

./: README.md  pyproject.toml  todo.md
feature_test/: test_rich.py  test_streamlit.py
nonotes/: browser_view.py  console.py  create_new_note.py  demo.md  explore_notes.py  markdown_app.py  markdown_file_menu.py  markdown_models.py  options.csv  test_browser_view.py  test_term_menu.py
notebooks/: output_markdown.html  test.db  test_pathlib.ipynb  test_python_markdown.ipynb  test_sqlite.ipynb  test_template.ipynb  test_template.md
styling/: markdown_app.css  styles.css
template/: template.md  template_presentation.md  template_reporting.md
