[tool.poetry]
name = "nonotes"
version = "0.1.0"
description = "Atempt at a custom and lightweight note taking management tool"
authors = ["tdurouchoux"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "<2.0.0"
numpy = "^1.24.2"
streamlit = "^1.21.0"
streamlit-ace = "^0.1.1"
rich = "^13.3.5"
textual = "^0.22.3"
markdown = "^3.4.3"
typer = {extras = ["all"], version = "^0.9.0"}
inquirerpy = "^0.3.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.poetry.scripts]
nonotes = 'nonotes.console:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
